bk_ida/gccida/g2/build_stmt
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/build_stmt/src/c-semantics.c:647:18: error: must use 'enum' tag to refer to type 'tree_code'
tree build_stmt( tree_code code, ...) 
                 ^
                 enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/build_stmt/src/c-semantics.c:656:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v8; // r8 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/build_stmt/src/c-semantics.c:658:1: error: use of undeclared identifier '$A887AD9C3C6C8CC7716950D571F57C9D'
$A887AD9C3C6C8CC7716950D571F57C9D *p_int_cst; // rax 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/build_stmt/src/c-semantics.c:658:36: error: use of undeclared identifier 'p_int_cst'
$A887AD9C3C6C8CC7716950D571F57C9D *p_int_cst; // rax 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/build_stmt/src/c-semantics.c:683:1: error: use of undeclared identifier 'p_int_cst'
p_int_cst = &node->int_cst.int_cst; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/build_stmt/src/c-semantics.c:691:1: error: use of undeclared identifier 'p_int_cst'
p_int_cst = ( $A887AD9C3C6C8CC7716950D571F57C9D *)( ( char *)p_int_cst + 8); 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/build_stmt/src/c-semantics.c:691:50: error: expected expression
p_int_cst = ( $A887AD9C3C6C8CC7716950D571F57C9D *)( ( char *)p_int_cst + 8); 
                                                 ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/build_stmt/src/c-semantics.c:691:15: error: use of undeclared identifier '$A887AD9C3C6C8CC7716950D571F57C9D'
p_int_cst = ( $A887AD9C3C6C8CC7716950D571F57C9D *)( ( char *)p_int_cst + 8); 
              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/build_stmt/src/c-semantics.c:691:62: error: use of undeclared identifier 'p_int_cst'
p_int_cst = ( $A887AD9C3C6C8CC7716950D571F57C9D *)( ( char *)p_int_cst + 8); 
                                                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/build_stmt/src/c-semantics.c:693:1: error: use of undeclared identifier 'p_int_cst'
p_int_cst[-1].high = *( _QWORD *)&v16[v13]; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/build_stmt/src/c-semantics.c:694:56: error: expected expression
if ( p_int_cst == ( $A887AD9C3C6C8CC7716950D571F57C9D *)v12 ) 
                                                       ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/build_stmt/src/c-semantics.c:694:21: error: use of undeclared identifier '$A887AD9C3C6C8CC7716950D571F57C9D'
if ( p_int_cst == ( $A887AD9C3C6C8CC7716950D571F57C9D *)v12 ) 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/build_stmt/src/c-semantics.c:694:6: error: use of undeclared identifier 'p_int_cst'
if ( p_int_cst == ( $A887AD9C3C6C8CC7716950D571F57C9D *)v12 ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/build_stmt/src/c-semantics.c:698:1: error: use of undeclared identifier 'p_int_cst'
p_int_cst = ( $A887AD9C3C6C8CC7716950D571F57C9D *)( ( char *)p_int_cst + 8); 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/build_stmt/src/c-semantics.c:698:50: error: expected expression
p_int_cst = ( $A887AD9C3C6C8CC7716950D571F57C9D *)( ( char *)p_int_cst + 8); 
                                                 ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/build_stmt/src/c-semantics.c:698:15: error: use of undeclared identifier '$A887AD9C3C6C8CC7716950D571F57C9D'
p_int_cst = ( $A887AD9C3C6C8CC7716950D571F57C9D *)( ( char *)p_int_cst + 8); 
              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/build_stmt/src/c-semantics.c:698:62: error: use of undeclared identifier 'p_int_cst'
p_int_cst = ( $A887AD9C3C6C8CC7716950D571F57C9D *)( ( char *)p_int_cst + 8); 
                                                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/build_stmt/src/c-semantics.c:700:1: error: use of undeclared identifier 'p_int_cst'
p_int_cst[-1].high = *( _QWORD *)v14; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/build_stmt/src/c-semantics.c:702:59: error: expected expression
while ( p_int_cst != ( $A887AD9C3C6C8CC7716950D571F57C9D *)v12 ); 
                                                          ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/build_stmt/src/obj/c-semantics.o] Error 1
